--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "",
+    "dev": "node --watch --env-file=.env index.js",
     "test": ""
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
 }
